# PipeDL

./: .gitignore  AGENTS.md  README.md  pipedl_cli.py  pipedl_gui.py  pyproject.toml
.github/workflows/: release.yml
docs/: agent-integration.md  release.md
packaging/pyinstaller/: PipeDL.spec  pipedl-cli.spec
packaging/windows/: PipeDL.iss
pipedl/: __init__.py  api.py  app.py  cli.py  config.py  demo.py  models.py  process_manager.py  scheduler.py  storage.py  updater.py
scripts/: build_windows.ps1
